# maiapp

./: .gitignore  CHANGELOG_SINCE_1.0.0.md  Dockerfile.landing  Dockerfile.server  Dockerfile.server3  README.md  build.gradle.kts  docker-compose.yml  gradle.properties  settings.gradle.kts  РЕЗЮМЕ_ИЗМЕНЕНИЙ.md  Установка maiapp на iphone (ПК windows).md
.github/workflows/: build-ios.yml  build-msi.yml  build-release.yml  build-server.yml  build-server3.yml  build-snapshot.yml  publish.yml
composeApp/: build.gradle.kts  proguard-rules.pro  secrets.properties.example
gradle/: libs.versions.toml
iosApp/iosApp/: Info.plist  iosApp.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
landing/: build.gradle.kts  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
landing/src/: App.tsx  PrimaryButton.tsx
landing/webpack.config.d/: dev-server-fallback.config.js
models/: build.gradle.kts
network/exler/: build.gradle.kts
network/github/: build.gradle.kts
network/mai/: build.gradle.kts
network/mymai/: build.gradle.kts
server/: build.gradle.kts
server-configs/anubis/: botPolicy.yaml
server-configs/caddy-external/: Caddyfile  Dockerfile
server-configs/nginx-internal/: nginx.conf
server-nginx/: nginx.conf
server3/: Cargo.toml
server3/src/: cache.rs  config.rs  errors.rs  main.rs  models.rs  state.rs  telemetry.rs
server3/src/http/: admin.rs  mod.rs  response.rs  routes.rs
server3/src/repositories/: exler.rs  mai.rs  mod.rs
server3/src/services/: data.rs  exler.rs  mod.rs  schedule.rs
shared/: build.gradle.kts
(+422 files in other folders)
