[package]
name = "server3"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["http2", "macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8"
futures = "0.3"
html-escape = "0.2"
md5 = "0.7"
mime_guess = "2.0"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["charset", "gzip", "brotli", "deflate", "json", "rustls-tls"] }
scraper = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
urlencoding = "2.1"
